--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ img {
     .left {
       min-width: 100%;
       display: flex;
+      flex-direction: column;
       flex-wrap: wrap;
       justify-content: center;
       font-size: 20px;
@@ -107,7 +108,8 @@ img {
     }
 
     .left img {
-      min-width: 70%;
+      width: 50%;
+      margin: 0 auto;
     }
 
     .left h3 {
@@ -157,5 +159,67 @@ img {
     .central h3 {
       font-size: 2em;
       text-align: center;
+    }
+
+    /* parte inferiore */
+
+    #why {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .first {
+      min-width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    .first h3 {
+      font-size: 2em;
+      text-align: center;
+    }
+
+    .first img {
+      width: 50%;
+    }
+
+    .second {
+      min-width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    .second h3 {
+      font-size: 2em;
+      text-align: center;
+    }
+
+    .second img {
+      width: 50%;
+    }
+
+    .third {
+      min-width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    .third h3 {
+      font-size: 2em;
+      text-align: center;
+    }
+
+    .third img {
+      width: 50%;
     }
 }
