--- a/bonus/style.css
+++ b/bonus/style.css
@@ -80,13 +80,12 @@ img {
   /* parte superiore */
 
   #lezioni{
-    width: 100%;
+    width: 90%;
     margin: auto;
   }
 
   .row {
     width: 100%;
-    float: left;
     margin-top: 20px;
   }
 
@@ -96,8 +95,8 @@ img {
   }
 
   .left {
-    width: 50%;
-    float: left;
+    width: 100%;
+    float: none;
   }
 
   .left img {
@@ -111,7 +110,7 @@ img {
 
   .right{
     width: 50%;
-    float: left;
+    float: none;
   }
 
   .right img {
@@ -124,6 +123,104 @@ img {
   }
 
   /* parte centrale */
+
+  #steps {
+    width: 90%;
+    margin: auto;
+  }
+
+  #steps .row .left {
+    float: left;
+    width: 50%;
+  }
+
+  #steps .row .left img {
+    width: 50%;
+  }
+
+  #steps .row .left h3 {
+    font-size: 30px;
+  }
+
+  #steps .row .central {
+    width: 50%;
+    float: left;
+  }
+
+  #steps .row .central img {
+    width: 50%;
+  }
+
+  #steps .row .central h3 {
+    font-size: 30px;
+  }
+
+  #steps .row .right {
+    width: 50%;
+    margin-left: 200px;
+    margin-top: 20px;
+  }
+
+  #steps .row .right img {
+    width: 50%;
+  }
+
+  #steps .row .right h3 {
+    font-size: 30px;
+  }
+
+  /* parte inferiore */
+
+  #why {
+    width: 90%;
+    margin: auto;
+  }
+
+  #why .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  #why .row h1 {
+    width: 100%;
+  }
+
+  #why .row .first {
+    width: 30%;
+  }
+
+  #why .row .first img {
+    width: 85%;
+  }
+
+  #why .row .first h3 {
+    font-size: 30px;
+  }
+
+  #why .row .second {
+    width: 30%;
+  }
+
+  #why .row .second img {
+    width: 85%;
+  }
+
+  #why .row .second h3 {
+    font-size: 30px;
+  }
+
+  #why .row .third {
+    width: 30%;
+  }
+
+  #why .row .third img {
+    width: 85%;
+  }
+
+  #why .row .third h3 {
+    font-size: 30px;
+  }
 
 }
 
